--- a/src/windows/mainwindow.ui
+++ b/src/windows/mainwindow.ui
@@ -1,216 +1,197 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
-    <class>MainWindow</class>
-    <widget class="QMainWindow" name="MainWindow">
-        <property name="geometry">
-            <rect>
-                <x>0</x>
-                <y>0</y>
-                <width>640</width>
-                <height>360</height>
-            </rect>
-        </property>
-        <property name="minimumSize">
-            <size>
-                <width>640</width>
-                <height>360</height>
-            </size>
-        </property>
-        <property name="windowTitle">
-            <string>qCw</string>
-        </property>
-        <property name="windowIcon">
-            <iconset resource="../resources.qrc">
-                <normaloff>:/icons/icon.svg</normaloff>:/icons/icon.svg
-            </iconset>
-        </property>
-        <widget class="QWidget" name="centralWidget">
-            <layout class="QGridLayout" name="gridLayout" columnstretch="0,0,0,0,0,0">
-                <item row="0" column="0">
-                    <widget class="QLabel" name="serialPortLabel">
-                        <property name="text">
-                            <string>Serial port</string>
-                        </property>
-                    </widget>
-                </item>
-                <item row="0" column="1">
-                    <widget class="QLineEdit" name="serialPortText">
-                        <property name="minimumSize">
-                            <size>
-                                <width>200</width>
-                                <height>0</height>
-                            </size>
-                        </property>
-                        <property name="readOnly">
-                            <bool>true</bool>
-                        </property>
-                    </widget>
-                </item>
-                <item row="0" column="2">
-                    <spacer name="headerHorizontalSpacer">
-                        <property name="orientation">
-                            <enum>Qt::Horizontal</enum>
-                        </property>
-                        <property name="sizeHint" stdset="0">
-                            <size>
-                                <width>241</width>
-                                <height>20</height>
-                            </size>
-                        </property>
-                    </spacer>
-                </item>
-                <item row="0" column="3">
-                    <widget class="QLabel" name="keyLabel">
-                        <property name="text">
-                            <string>Key</string>
-                        </property>
-                    </widget>
-                </item>
-                <item row="0" column="4">
-                    <widget class="QLabel" name="dotLabel">
-                        <property name="font">
-                            <font>
-                                <family>Monospace</family>
-                                <pointsize>10</pointsize>
-                                <weight>50</weight>
-                                <bold>false</bold>
-                            </font>
-                        </property>
-                        <property name="text">
-                            <string>###</string>
-                        </property>
-                    </widget>
-                </item>
-                <item row="0" column="5">
-                    <widget class="QLabel" name="dashLabel">
-                        <property name="font">
-                            <font>
-                                <family>Monospace</family>
-                                <pointsize>10</pointsize>
-                                <weight>50</weight>
-                                <bold>false</bold>
-                            </font>
-                        </property>
-                        <property name="text">
-                            <string>###</string>
-                        </property>
-                    </widget>
-                </item>
-                <item row="1" column="0" colspan="6">
-                    <widget class="QStackedWidget" name="stackedWidget">
-                        <property name="minimumSize">
-                            <size>
-                                <width>0</width>
-                                <height>30</height>
-                            </size>
-                        </property>
-                        <property name="maximumSize">
-                            <size>
-                                <width>16777215</width>
-                                <height>30</height>
-                            </size>
-                        </property>
-                        <property name="currentIndex">
-                            <number>-1</number>
-                        </property>
-                    </widget>
-                </item>
-                <item row="2" column="0" colspan="6">
-                    <widget class="QTextEdit" name="morseText"/>
-                </item>
-            </layout>
-        </widget>
-        <widget class="QMenuBar" name="menuBar">
-            <property name="geometry">
-                <rect>
-                    <x>0</x>
-                    <y>0</y>
-                    <width>640</width>
-                    <height>20</height>
-                </rect>
-            </property>
-            <widget class="QMenu" name="menuFile">
-                <property name="title">
-                    <string>&amp;File</string>
-                </property>
-                <addaction name="actionFileExit"/>
-            </widget>
-            <widget class="QMenu" name="menuSetup">
-                <property name="title">
-                    <string>Setup</string>
-                </property>
-                <addaction name="actionSetupConfig"/>
-                <addaction name="actionSetupRun"/>
-            </widget>
-            <widget class="QMenu" name="menuHelp">
-                <property name="title">
-                    <string>Help</string>
-                </property>
-                <addaction name="actionHelpAbout"/>
-            </widget>
-            <addaction name="menuFile"/>
-            <addaction name="menuSetup"/>
-            <addaction name="menuHelp"/>
-        </widget>
-        <widget class="QToolBar" name="mainToolBar">
-            <property name="movable">
-                <bool>false</bool>
-            </property>
-            <property name="allowedAreas">
-                <set>Qt::TopToolBarArea</set>
-            </property>
-            <attribute name="toolBarArea">
-                <enum>TopToolBarArea</enum>
-            </attribute>
-            <attribute name="toolBarBreak">
-                <bool>false</bool>
-            </attribute>
-            <addaction name="actionSetupConfig"/>
-            <addaction name="actionSetupRun"/>
-        </widget>
-        <widget class="QStatusBar" name="statusBar"/>
-        <action name="actionSetupRun">
-            <property name="checkable">
-                <bool>true</bool>
-            </property>
-            <property name="icon">
-                <iconset resource="../resources.qrc">
-                    <normaloff>:/icons/run.svg</normaloff>:/icons/run.svg
-                </iconset>
-            </property>
-            <property name="text">
-                <string>Run</string>
-            </property>
-        </action>
-        <action name="actionFileExit">
-            <property name="text">
-                <string>E&amp;xit</string>
-            </property>
-        </action>
-        <action name="actionHelpAbout">
-            <property name="icon">
-                <iconset resource="../resources.qrc">
-                    <normaloff>:/icons/about.svg</normaloff>:/icons/about.svg
-                </iconset>
-            </property>
-            <property name="text">
-                <string>About</string>
-            </property>
-        </action>
-        <action name="actionSetupConfig">
-            <property name="icon">
-                <iconset resource="../resources.qrc">
-                    <normaloff>:/icons/config.svg</normaloff>:/icons/config.svg
-                </iconset>
-            </property>
-            <property name="text">
-                <string>&amp;Config</string>
-            </property>
-        </action>
-    </widget>
-    <layoutdefault spacing="6" margin="11"/>
-    <resources>
-        <include location="../resources.qrc"/>
-    </resources>
-    <connections/>
+ <class>MainWindow</class>
+ <widget class="QMainWindow" name="MainWindow">
+  <property name="geometry">
+   <rect>
+    <x>0</x>
+    <y>0</y>
+    <width>640</width>
+    <height>360</height>
+   </rect>
+  </property>
+  <property name="minimumSize">
+   <size>
+    <width>640</width>
+    <height>360</height>
+   </size>
+  </property>
+  <property name="windowTitle">
+   <string>qCw</string>
+  </property>
+  <property name="windowIcon">
+   <iconset resource="../resources.qrc">
+    <normaloff>:/icons/icon.svg</normaloff>:/icons/icon.svg</iconset>
+  </property>
+  <widget class="QWidget" name="centralWidget">
+   <layout class="QGridLayout" name="gridLayout" columnstretch="0,0,0,0,0">
+    <item row="0" column="0">
+     <widget class="QLabel" name="serialPortLabel">
+      <property name="text">
+       <string>Serial port</string>
+      </property>
+     </widget>
+    </item>
+    <item row="0" column="1">
+     <widget class="QLineEdit" name="serialPortText">
+      <property name="minimumSize">
+       <size>
+        <width>200</width>
+        <height>0</height>
+       </size>
+      </property>
+      <property name="readOnly">
+       <bool>true</bool>
+      </property>
+     </widget>
+    </item>
+    <item row="0" column="2">
+     <spacer name="headerHorizontalSpacer">
+      <property name="orientation">
+       <enum>Qt::Horizontal</enum>
+      </property>
+      <property name="sizeHint" stdset="0">
+       <size>
+        <width>241</width>
+        <height>20</height>
+       </size>
+      </property>
+     </spacer>
+    </item>
+    <item row="0" column="3">
+     <widget class="QLabel" name="keyLabel">
+      <property name="text">
+       <string>Key</string>
+      </property>
+     </widget>
+    </item>
+    <item row="0" column="4">
+     <widget class="QLabel" name="keyStatus">
+      <property name="font">
+       <font>
+        <family>Monospace</family>
+        <pointsize>10</pointsize>
+        <weight>50</weight>
+        <bold>false</bold>
+       </font>
+      </property>
+      <property name="text">
+       <string>###</string>
+      </property>
+     </widget>
+    </item>
+    <item row="1" column="0" colspan="5">
+     <widget class="QStackedWidget" name="stackedWidget">
+      <property name="minimumSize">
+       <size>
+        <width>0</width>
+        <height>30</height>
+       </size>
+      </property>
+      <property name="maximumSize">
+       <size>
+        <width>16777215</width>
+        <height>30</height>
+       </size>
+      </property>
+      <property name="currentIndex">
+       <number>-1</number>
+      </property>
+     </widget>
+    </item>
+    <item row="2" column="0" colspan="5">
+     <widget class="QTextEdit" name="morseText"/>
+    </item>
+   </layout>
+  </widget>
+  <widget class="QMenuBar" name="menuBar">
+   <property name="geometry">
+    <rect>
+     <x>0</x>
+     <y>0</y>
+     <width>640</width>
+     <height>20</height>
+    </rect>
+   </property>
+   <widget class="QMenu" name="menuFile">
+    <property name="title">
+     <string>&amp;File</string>
+    </property>
+    <addaction name="actionFileExit"/>
+   </widget>
+   <widget class="QMenu" name="menuSetup">
+    <property name="title">
+     <string>Setup</string>
+    </property>
+    <addaction name="actionSetupConfig"/>
+    <addaction name="actionSetupRun"/>
+   </widget>
+   <widget class="QMenu" name="menuHelp">
+    <property name="title">
+     <string>Help</string>
+    </property>
+    <addaction name="actionHelpAbout"/>
+   </widget>
+   <addaction name="menuFile"/>
+   <addaction name="menuSetup"/>
+   <addaction name="menuHelp"/>
+  </widget>
+  <widget class="QToolBar" name="mainToolBar">
+   <property name="movable">
+    <bool>false</bool>
+   </property>
+   <property name="allowedAreas">
+    <set>Qt::TopToolBarArea</set>
+   </property>
+   <attribute name="toolBarArea">
+    <enum>TopToolBarArea</enum>
+   </attribute>
+   <attribute name="toolBarBreak">
+    <bool>false</bool>
+   </attribute>
+   <addaction name="actionSetupConfig"/>
+   <addaction name="actionSetupRun"/>
+  </widget>
+  <widget class="QStatusBar" name="statusBar"/>
+  <action name="actionSetupRun">
+   <property name="checkable">
+    <bool>true</bool>
+   </property>
+   <property name="icon">
+    <iconset resource="../resources.qrc">
+     <normaloff>:/icons/run.svg</normaloff>:/icons/run.svg</iconset>
+   </property>
+   <property name="text">
+    <string>Run</string>
+   </property>
+  </action>
+  <action name="actionFileExit">
+   <property name="text">
+    <string>E&amp;xit</string>
+   </property>
+  </action>
+  <action name="actionHelpAbout">
+   <property name="icon">
+    <iconset resource="../resources.qrc">
+     <normaloff>:/icons/about.svg</normaloff>:/icons/about.svg</iconset>
+   </property>
+   <property name="text">
+    <string>About</string>
+   </property>
+  </action>
+  <action name="actionSetupConfig">
+   <property name="icon">
+    <iconset resource="../resources.qrc">
+     <normaloff>:/icons/config.svg</normaloff>:/icons/config.svg</iconset>
+   </property>
+   <property name="text">
+    <string>&amp;Config</string>
+   </property>
+  </action>
+ </widget>
+ <layoutdefault spacing="6" margin="11"/>
+ <resources>
+  <include location="../resources.qrc"/>
+ </resources>
+ <connections/>
 </ui>
