--- a/src/windows/mainwindow.ui
+++ b/src/windows/mainwindow.ui
@@ -24,48 +24,22 @@
     <normaloff>:/icons/icon.svg</normaloff>:/icons/icon.svg</iconset>
   </property>
   <widget class="QWidget" name="centralWidget">
-   <layout class="QGridLayout" name="gridLayout" columnstretch="0,0,0,0,0">
+   <layout class="QGridLayout" name="gridLayout" columnstretch="0,0,0,0,0,0">
     <item row="0" column="0">
-     <widget class="QLabel" name="serialPortLabel">
+     <widget class="QPushButton" name="clearTextButton">
       <property name="text">
-       <string>Serial port</string>
+       <string>Clear text</string>
       </property>
      </widget>
     </item>
-    <item row="0" column="1">
-     <widget class="QLineEdit" name="serialPortText">
-      <property name="minimumSize">
-       <size>
-        <width>200</width>
-        <height>0</height>
-       </size>
-      </property>
-      <property name="readOnly">
-       <bool>true</bool>
-      </property>
-     </widget>
-    </item>
-    <item row="0" column="2">
-     <spacer name="headerHorizontalSpacer">
-      <property name="orientation">
-       <enum>Qt::Horizontal</enum>
-      </property>
-      <property name="sizeHint" stdset="0">
-       <size>
-        <width>241</width>
-        <height>20</height>
-       </size>
-      </property>
-     </spacer>
-    </item>
-    <item row="0" column="3">
+    <item row="0" column="4">
      <widget class="QLabel" name="keyLabel">
       <property name="text">
        <string>Key</string>
       </property>
      </widget>
     </item>
-    <item row="0" column="4">
+    <item row="0" column="5">
      <widget class="QLabel" name="keyStatus">
       <property name="font">
        <font>
@@ -80,7 +54,27 @@
       </property>
      </widget>
     </item>
-    <item row="1" column="0" colspan="5">
+    <item row="0" column="2" colspan="2">
+     <spacer name="headerHorizontalSpacer">
+      <property name="orientation">
+       <enum>Qt::Horizontal</enum>
+      </property>
+      <property name="sizeHint" stdset="0">
+       <size>
+        <width>241</width>
+        <height>20</height>
+       </size>
+      </property>
+     </spacer>
+    </item>
+    <item row="0" column="1">
+     <widget class="QPushButton" name="clearLineButton">
+      <property name="text">
+       <string>Clear line</string>
+      </property>
+     </widget>
+    </item>
+    <item row="1" column="0" colspan="6">
      <widget class="QStackedWidget" name="stackedWidget">
       <property name="minimumSize">
        <size>
@@ -99,8 +93,15 @@
       </property>
      </widget>
     </item>
-    <item row="2" column="0" colspan="5">
-     <widget class="QTextEdit" name="morseText"/>
+    <item row="2" column="0" colspan="6">
+     <widget class="QTextEdit" name="morseText">
+      <property name="font">
+       <font>
+        <family>Monospace</family>
+        <pointsize>9</pointsize>
+       </font>
+      </property>
+     </widget>
     </item>
    </layout>
   </widget>
