Setting textEdit to read-only

--- a/src/windows/mainwindow.ui
+++ b/src/windows/mainwindow.ui
@@ -101,6 +101,9 @@
         <pointsize>9</pointsize>
        </font>
       </property>
+      <property name="readOnly">
+       <bool>true</bool>
+      </property>
      </widget>
     </item>
    </layout>
