--- a/src/resources.qrc
+++ b/src/resources.qrc
@@ -1,7 +1,8 @@
 <RCC>
     <qresource prefix="/icons">
         <file alias="icon.svg">../icons/icon.svg</file>
-        <file alias="run.svg">../icons/run.svg</file>
+        <file alias="play.svg">../icons/play.svg</file>
+        <file alias="usb.svg">../icons/usb.svg</file>
         <file alias="config.svg">../icons/config.svg</file>
         <file alias="about.svg">../icons/about.svg</file>
     </qresource>
