--- a/src/windows/mainwindow.ui
+++ b/src/windows/mainwindow.ui
@@ -26,30 +26,54 @@
   <widget class="QWidget" name="centralWidget">
    <layout class="QGridLayout" name="gridLayout_3">
     <item row="0" column="0">
-     <layout class="QGridLayout" name="upperLayout">
-      <item row="0" column="3">
-       <widget class="QLabel" name="keyLabel">
+     <layout class="QGridLayout" name="upperLayout" columnstretch="0,0,0,1,0,0">
+      <item row="0" column="0">
+       <widget class="QPushButton" name="clearLineButton">
         <property name="text">
-         <string>Key</string>
+         <string>Clear line</string>
+        </property>
+        <property name="icon">
+         <iconset resource="../resources.qrc">
+          <normaloff>:/icons/erase.svg</normaloff>:/icons/erase.svg</iconset>
         </property>
        </widget>
       </item>
-      <item row="0" column="4">
-       <widget class="QLabel" name="keyStatus">
-        <property name="font">
-         <font>
-          <family>Monospace</family>
-          <pointsize>10</pointsize>
-          <weight>50</weight>
-          <bold>false</bold>
-         </font>
-        </property>
+      <item row="0" column="1">
+       <widget class="QLabel" name="timerIntervalLabel">
         <property name="text">
-         <string>###</string>
+         <string>Line speed</string>
         </property>
        </widget>
       </item>
       <item row="0" column="2">
+       <widget class="QSlider" name="timerIntervalSlider">
+        <property name="minimum">
+         <number>0</number>
+        </property>
+        <property name="maximum">
+         <number>20</number>
+        </property>
+        <property name="value">
+         <number>10</number>
+        </property>
+        <property name="orientation">
+         <enum>Qt::Horizontal</enum>
+        </property>
+        <property name="invertedAppearance">
+         <bool>false</bool>
+        </property>
+        <property name="invertedControls">
+         <bool>false</bool>
+        </property>
+        <property name="tickPosition">
+         <enum>QSlider::TicksAbove</enum>
+        </property>
+        <property name="tickInterval">
+         <number>2</number>
+        </property>
+       </widget>
+      </item>
+      <item row="0" column="3">
        <spacer name="headerHorizontalSpacer">
         <property name="orientation">
          <enum>Qt::Horizontal</enum>
@@ -62,14 +86,25 @@
         </property>
        </spacer>
       </item>
-      <item row="0" column="1">
-       <widget class="QPushButton" name="clearLineButton">
+      <item row="0" column="4">
+       <widget class="QLabel" name="keyLabel">
         <property name="text">
-         <string>Clear line</string>
+         <string>Key</string>
         </property>
-        <property name="icon">
-         <iconset resource="../resources.qrc">
-          <normaloff>:/icons/erase.svg</normaloff>:/icons/erase.svg</iconset>
+       </widget>
+      </item>
+      <item row="0" column="5">
+       <widget class="QLabel" name="keyStatus">
+        <property name="font">
+         <font>
+          <family>Monospace</family>
+          <pointsize>10</pointsize>
+          <weight>50</weight>
+          <bold>false</bold>
+         </font>
+        </property>
+        <property name="text">
+         <string>###</string>
         </property>
        </widget>
       </item>
