--- a/src/windows/mainwindow.ui
+++ b/src/windows/mainwindow.ui
@@ -182,7 +182,10 @@
          </font>
         </property>
         <property name="readOnly">
-         <bool>true</bool>
+         <bool>false</bool>
+        </property>
+        <property name="acceptRichText">
+         <bool>false</bool>
         </property>
        </widget>
       </item>
